test/errors/error15.base
This expression has type 'int' but 'real' was expected
fun foo() {
   val x : real = 1;
                  ^
